--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,117 +10,121 @@
 <ion-content>
     <ion-card>
         <ion-card-header>
-          
-          <ion-card-title>kali</ion-card-title>
+
+            <ion-card-title>kali</ion-card-title>
         </ion-card-header>
         <ion-img src="https://etniasdelmundo.com/wp-content/uploads/2020/02/NAHUATL-1.jpg"></ion-img>
         <ion-card-content>
             tlapalolistli
         </ion-card-content>
-      </ion-card>
-      <ion-row>
+    </ion-card>
+    <ion-row>
         <ion-col size="3">
-        Español
+            Español
         </ion-col>
         <ion-col>
-        Nahuatl
+            Nahuatl
         </ion-col>
         <ion-col size="3">
-        Ejemplo
-        Machiotl
+            Ejemplo Machiotl
         </ion-col>
-      </ion-row>
-      <ion-row>
+    </ion-row>
+    <ion-row>
         <ion-col size="3">
-        Hola
+            Hola
         </ion-col>
         <ion-col>
-        Niltse
+            Niltse
         </ion-col>
         <ion-col size="3">
-          Hola Pedro
+            Hola Pedro
         </ion-col>
-      </ion-row>
-      <ion-row>
+    </ion-row>
+    <ion-row>
         <ion-col size="3">
-        Adios
+            Adios
         </ion-col>
         <ion-col>
-        Anej
+            Anej
         </ion-col>
         <ion-col size="3">
-        Adios Juan
+            Adios Juan
         </ion-col>
-      </ion-row>
-      <ion-row>
+    </ion-row>
+    <ion-row>
         <ion-col size="3">
-        Hasta mañana
+            Hasta mañana
         </ion-col>
         <ion-col>
-        Ixkichka mostla
+            Ixkichka mostla
         </ion-col>
         <ion-col size="3">
-        Hasta mañana Alexis
+            Hasta mañana Alexis
         </ion-col>
-      </ion-row>
-      <ion-row>
+    </ion-row>
+    <ion-row>
         <ion-col size="3">
-        Que estés bien
+            Que estés bien
         </ion-col>
         <ion-col>
-        Ma xipatinemi
+            Ma xipatinemi
         </ion-col>
         <ion-col size="3">
-          Que estés bien José
+            Que estés bien José
         </ion-col>
-      </ion-row>
-      <ion-row>
+    </ion-row>
+    <ion-row>
         <ion-col size="3">
-        ¿Cómo
-        estas?
+            ¿Cómo estas?
         </ion-col>
         <ion-col>
-        Kenin 
-        otimopanolti
+            Kenin otimopanolti
         </ion-col>
         <ion-col size="3">
-        ¿Cómo estas Ribaldo? 
+            ¿Cómo estas Ribaldo?
         </ion-col>
-      </ion-row>
-      <ion-row>
+    </ion-row>
+    <ion-row>
         <ion-col size="3">
-        Mal
+            Mal
         </ion-col>
         <ion-col>
-        Akuali
+            Akuali
         </ion-col>
         <ion-col size="3">
-          Estoy mal
+            Estoy mal
         </ion-col>
-      </ion-row>
-      <ion-row>
+    </ion-row>
+    <ion-row>
         <ion-col size="3">
-        Bien
+            Bien
         </ion-col>
         <ion-col>
-        Kuali
+            Kuali
         </ion-col>
         <ion-col size="3">
-        Estoy bien
+            Estoy bien
         </ion-col>
-      </ion-row> <ion-row>
+    </ion-row>
+    <ion-row>
         <ion-col size="3">
-        ¿Cómo te llamas?
+            ¿Cómo te llamas?
         </ion-col>
         <ion-col>
-        Kenin motoka
+            Kenin motoka
         </ion-col>
         <ion-col size="3">
-        ¿Cómo te llamas?
+            ¿Cómo te llamas?
         </ion-col>
-      </ion-row>
-      
-      
-    
-      <ion-button href="/numeros" color="primary">Siguiente</ion-button>    
+    </ion-row>
 </ion-content>
+<ion-toolbar>
+    <ion-button slot="start" href="/folder/folder.module">
+        <ion-icon slot="start" name="caret-back-outline">
+        </ion-icon>
+    </ion-button>
+    <ion-button slot="end" href="/numeros">
+        <ion-icon slot="start" name="caret-forward-outline">
+        </ion-icon>
+    </ion-button>
+</ion-toolbar>
