--- a/src/app/customers/customers.page.html
+++ b/src/app/customers/customers.page.html
@@ -9,36 +9,55 @@
 
 <ion-content>
 
-<ion-img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW-Y3jiHryGQIwhZeVN6Af2Ykl7rL102yYlw&usqp=CAUs"></ion-img>
+    <ion-img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW-Y3jiHryGQIwhZeVN6Af2Ykl7rL102yYlw&usqp=CAUs "></ion-img>
 
-<ion-accordion-group>
-    <ion-accordion value="colors" toggle-icon="arrow-down-circle">
-      <ion-item slot="header">
-        <ion-label>Tlapaltekonali/Colores</ion-label>
-      </ion-item>
-      <ion-list slot="content">
-        <ion-item>
-          <ion-label>Chichiltic-Rojo</ion-label><ion-badge color="danger">R</ion-badge>
-        </ion-item>
-        <ion-item>
-          <ion-label>Xoxoctic-Verde</ion-label><ion-badge color="success">V</ion-badge>
-        </ion-item>
-        <ion-item>
-          <ion-label>Azultic-Azul</ion-label><ion-badge color="primary">A</ion-badge>
-        </ion-item>
-        <ion-item>
-            <ion-label>Chipahuac-Blanco</ion-label><ion-badge color="light">B</ion-badge>
-          </ion-item>
-          <ion-item>
-            <ion-label>Yayahuic-Negro</ion-label><ion-badge color="dark">R</ion-badge>
-          </ion-item>
-          <ion-item>
-            <ion-label>Achilcoz-Anaranjado</ion-label><ion-badge color="warning">N</ion-badge>
-          </ion-item>
-          <ion-item>
-            <ion-label>Tenextic-Gris</ion-label><ion-badge color="medium">R</ion-badge>
-          </ion-item>
-          
-      </ion-list>
-</ion-accordion>
-<ion-button  href="/folder/Inbox" color="primary">Siguiente Nivel 2</ion-button>
+    <ion-accordion-group>
+        <ion-accordion value="colors" toggle-icon="arrow-down-circle">
+            <ion-item slot="header">
+                <ion-label>Tlapaltekonali/Colores</ion-label>
+            </ion-item>
+            <ion-list slot="content">
+                <ion-item>
+                    <ion-label>Chichiltic-Rojo</ion-label>
+                    <ion-badge color="danger">R</ion-badge>
+                </ion-item>
+                <ion-item>
+                    <ion-label>Xoxoctic-Verde</ion-label>
+                    <ion-badge color="success">V</ion-badge>
+                </ion-item>
+                <ion-item>
+                    <ion-label>Azultic-Azul</ion-label>
+                    <ion-badge color="primary">A</ion-badge>
+                </ion-item>
+                <ion-item>
+                    <ion-label>Chipahuac-Blanco</ion-label>
+                    <ion-badge color="light">B</ion-badge>
+                </ion-item>
+                <ion-item>
+                    <ion-label>Yayahuic-Negro</ion-label>
+                    <ion-badge color="dark">R</ion-badge>
+                </ion-item>
+                <ion-item>
+                    <ion-label>Achilcoz-Anaranjado</ion-label>
+                    <ion-badge color="warning">N</ion-badge>
+                </ion-item>
+                <ion-item>
+                    <ion-label>Tenextic-Gris</ion-label>
+                    <ion-badge color="medium">R</ion-badge>
+                </ion-item>
+
+            </ion-list>
+        </ion-accordion>
+    </ion-accordion-group>
+
+</ion-content>
+<ion-toolbar>
+    <ion-button slot="start" href="/numeros">
+        <ion-icon slot="start" name="caret-back-outline">
+        </ion-icon>
+    </ion-button>
+    <ion-button slot="end" href="/salud">
+        <ion-icon slot="start" name="caret-forward-outline">
+        </ion-icon>
+    </ion-button>
+</ion-toolbar>
