--- a/src/app/numeros2/numeros2.page.html
+++ b/src/app/numeros2/numeros2.page.html
@@ -1,7 +1,10 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>numeros2</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="mycolor">
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>numeros2</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
