--- a/src/app/customers2/customers2.page.html
+++ b/src/app/customers2/customers2.page.html
@@ -10,3 +10,14 @@
 <ion-content>
 
 </ion-content>
+
+<ion-toolbar>
+    <ion-button slot="start" href="/numeros2">
+        <ion-icon slot="start" name="caret-back-outline">
+        </ion-icon>
+    </ion-button>
+    <ion-button slot="end" href="/salud2">
+        <ion-icon slot="start" name="caret-forward-outline">
+        </ion-icon>
+    </ion-button>
+</ion-toolbar>
