--- a/src/app/home2/home2.page.html
+++ b/src/app/home2/home2.page.html
@@ -10,3 +10,13 @@
 <ion-content>
 
 </ion-content>
+<ion-toolbar>
+    <ion-button slot="start" href="/folder/folder.module">
+        <ion-icon slot="start" name="caret-back-outline">
+        </ion-icon>
+    </ion-button>
+    <ion-button slot="end" href="/numeros2">
+        <ion-icon slot="start" name="caret-forward-outline">
+        </ion-icon>
+    </ion-button>
+</ion-toolbar>
