--- a/src/app/numeros3/numeros3.page.html
+++ b/src/app/numeros3/numeros3.page.html
@@ -10,3 +10,13 @@
 <ion-content>
 
 </ion-content>
+<ion-toolbar>
+    <ion-button slot="start" href="/home3">
+        <ion-icon slot="start" name="caret-back-outline">
+        </ion-icon>
+    </ion-button>
+    <ion-button slot="end" href="/customers3">
+        <ion-icon slot="start" name="caret-forward-outline">
+        </ion-icon>
+    </ion-button>
+</ion-toolbar>
