--- a/src/app/customers/customers.page.html
+++ b/src/app/customers/customers.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-    <ion-img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW-Y3jiHryGQIwhZeVN6Af2Ykl7rL102yYlw&usqp=CAUs "></ion-img>
+    <ion-img src="assets/img/customers.jpg"></ion-img>
     <ion-accordion-group>
         <ion-accordion value="colors" toggle-icon="arrow-down-circle">
             <ion-item slot="header">
