--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>Kali</ion-title>
+        <ion-title>Tetlapaloa</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -11,9 +11,9 @@
     <ion-card>
         <ion-card-header>
 
-            <ion-card-title>kali</ion-card-title>
+            <ion-card-title>Tetlapaloa</ion-card-title>
         </ion-card-header>
-        <ion-img src="https://etniasdelmundo.com/wp-content/uploads/2020/02/NAHUATL-1.jpg"></ion-img>
+        <ion-img src="assets/img/home.jpg"></ion-img>
         <ion-card-content>
             tlapalolistli
         </ion-card-content>
