--- a/src/app/salud/salud.page.html
+++ b/src/app/salud/salud.page.html
@@ -7,7 +7,7 @@
     </ion-toolbar>
 </ion-header>
 <ion-content>
-    <ion-img src="https://www.redalyc.org/journal/351/35149890009/35149890009_gf1.jpg"></ion-img>
+    <ion-img src="assets/img/salud.jpg"></ion-img>
     <ion-accordion-group>
         <ion-accordion value="enfer" toggle-icon="swap-vertical-outline">
             <ion-item slot="header">
