--- a/src/app/numeros/numeros.page.html
+++ b/src/app/numeros/numeros.page.html
@@ -43,7 +43,7 @@
 <ion-content>
     <ion-fab vertical="bottom" horizontal="start" slot="fixed">
     </ion-fab>
-    <ion-img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTdoqrg1ZgSQLo4bVyo5IiIGHS0m7KVEBVNSw&usqp=CAU"></ion-img>
+    <ion-img src="assets/img/numeros.jpg"></ion-img>
 
 </ion-content>
 <ion-toolbar>
