--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -153,6 +153,12 @@
             <ion-fab-button>
                 <ion-icon name="person-add-outline" [routerLink]="['/login']"></ion-icon>
             </ion-fab-button>
+            <ion-fab-button>
+                <ion-icon name="chatbubbles-outline" [routerLink]="['/formulario']"></ion-icon>
+            </ion-fab-button>
         </ion-fab-list>
+        
+        
+        
     </ion-fab>
 </ion-content>
