--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,37 +1,30 @@
-<ion-header>
-    <ion-toolbar color="mycolor">
-        <ion-buttons slot="start">
-            <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title>Login</ion-title>
-    </ion-toolbar>
-</ion-header>
-<ion-content class="auth-form">
-    <ion-grid>
-        <ion-row>
-            <ion-item>
-                <ion-input placeholder='Username'></ion-input>
-                <ion-icon name='person' slot='start'></ion-icon>
-            </ion-item>
-        </ion-row>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-        <ion-row>
-            <ion-item>
-                <ion-input type='password' placeholder='* * * * * * * * * *'></ion-input>
-                <ion-icon name='lock-closed' slot='start'></ion-icon>
-            </ion-item>
-        </ion-row>
+<!------ Include the above in your HEAD tag ---------->
 
-        <ion-row align="center">
-            <ion-col align-self-center>
-                <ion-button [routerLink]="['/registration']" color="primary">Register</ion-button>
-                <br>
-            </ion-col>
-        </ion-row>
-        <ion-row align="center">
-            <ion-col align-self-center>
-                <ion-button [routerLink]="['/login']" color="danger">Sign In</ion-button>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-</ion-content>
+<div class="wrapper fadeInDown" color="mycolor">
+  <div id="formContent">
+    <!-- Tabs Titles -->
+
+    <!-- Icon -->
+    <div class="fadeIn first">
+      <img src="../../assets/img/logo.jpg" id="icon" alt="User Icon" />
+    </div>
+
+    <!-- Login Form -->
+    <form>
+      <input type="text" id="login" class="fadeIn second" name="login" placeholder="Motoka">
+      <input type="text" id="password" class="fadeIn third" name="login"placeholder='* * * * * * * * * *'>
+      <input type="submit" class="fadeIn fourth"  [routerLink]="['/folder/folder.module
+      ']" value="Tsintilistli"> 
+    </form>
+
+    <!-- Remind Passowrd -->
+    <div id="formFooter">
+      <a class="underlineHover" href="registration">yankuik</a>
+    </div>
+
+  </div>
+</div>
