--- a/src/app/numeros2/numeros2.page.html
+++ b/src/app/numeros2/numeros2.page.html
@@ -8,7 +8,41 @@
 </ion-header>
 
 <ion-content>
-
+    <ion-list>
+        <ion-item>
+          <ion-range color="danger" [pin]="true"></ion-range>
+        </ion-item>
+      
+        <ion-item>
+          <ion-range min="-200" max="200" color="secondary">
+            <ion-label slot="start">-200</ion-label>
+            <ion-label slot="end">200</ion-label>
+          </ion-range>
+        </ion-item>
+      
+        <ion-item>
+          <ion-range min="20" max="80" step="2">
+            <ion-icon size="small" slot="start" name="sunny"></ion-icon>
+            <ion-icon slot="end" name="sunny"></ion-icon>
+          </ion-range>
+        </ion-item>
+      
+        <ion-item>
+          <ion-range min="1000" max="2000" step="100" snaps="true" color="secondary"></ion-range>
+        </ion-item>
+      
+        <ion-item>
+          <ion-range min="1000" max="2000" step="100" snaps="true" ticks="false" color="secondary"></ion-range>
+        </ion-item>
+      
+        <ion-item>
+          <ion-range dualKnobs="true" min="21" max="72" step="3" snaps="true"></ion-range>
+        </ion-item>
+        
+        <ion-item>
+          <ion-range min="0" max="100" [pinFormatter]="customFormatter" [pin]="true"></ion-range>
+        </ion-item>
+      </ion-list>
 </ion-content>
 <ion-toolbar>
     <ion-button slot="start" href="/home2">
