--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -1,30 +1,45 @@
-<ion-header>
-    <ion-toolbar color="mycolor">
-        <ion-buttons slot="start">
-            <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title>Registration</ion-title>
-    </ion-toolbar>
-</ion-header>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
 
-<ion-content>
-    <form>
-        <ion-item lines="full">
-            <ion-label position="floating">Nombre Completo</ion-label>
-            <ion-input type="text" required></ion-input>
-        </ion-item>
-        <ion-item lines="full">
-            <ion-label position="floating">Correo</ion-label>
-            <ion-input type="text" required></ion-input>
-        </ion-item>
-        <ion-item lines="full">
-            <ion-label position="floating">Contraseña</ion-label>
-            <ion-input type="password" required></ion-input>
-        </ion-item>
-        <ion-row>
-            <ion-col>
-                <ion-button type="submit" color="danger" expand="block">Sign Up</ion-button>
-            </ion-col>
-        </ion-row>
-    </form>
-</ion-content>
+<div class="wrapper fadeInDown">
+  <div id="formContent">
+    <!-- Tabs Titles -->
+
+    <!-- Icon -->
+    <div class="fadeIn first">
+      <img src="../../assets/img/logo.jpg" id="icon" alt="User Icon" />
+    </div>
+    <form class="row g-3">
+        <div class="col-md-4">
+          <label for="validationServer01" class="form-label">Nombre</label>
+          <input type="text" class="form-control is-valid" id="validationServer01" value="" required>
+          <div class="valid-feedback">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationServerUsername" class="form-label">Correo</label>
+          <div class="input-group has-validation">
+            <span class="input-group-text" id="inputGroupPrepend3">@</span>
+            <input type="text" class="form-control is-invalid" id="validationServerUsername" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
+            <div id="validationServerUsernameFeedback" class="invalid-feedback">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label for="validationServer03" class="form-label">Contraseña</label>
+          <input type="password" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
+          <div id="validationServer03Feedback" class="invalid-feedback">
+          </div>
+        </div>
+        
+        
+        
+        
+        <div class="col-12">
+          <a class="btn btn-secondary" href="folder/Inbox">Hecho</a>
+        </div>
+      </form>
+  </div>
+</div>
