--- a/src/app/customers2/customers2.page.html
+++ b/src/app/customers2/customers2.page.html
@@ -3,13 +3,69 @@
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>customers2</ion-title>
+        <ion-title>Tlapali aueyak tsala</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-item>
+    <ion-label position="fixed">Azul</ion-label>
+    <ion-input></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="fixed">Verde</ion-label>
+    <ion-input></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="fixed">Amarillo</ion-label>
+    <ion-input></ion-input>
+  </ion-item>
+      
 
-</ion-content>
+<ion-item>
+  <ion-label position="fixed">Negro</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+<ion-item>
+  <ion-label position="fixed">ROJO</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+<ion-item>
+  <ion-label position="fixed">Negro</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+<ion-item>
+  <ion-label position="fixed">ROJO</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+<ion-item>
+  <ion-label position="fixed">Negro</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+<ion-item>
+  <ion-label position="fixed">ROJO</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+<ion-item>
+  <ion-label position="fixed">ROJO</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+<ion-item>
+  <ion-label position="fixed">Negro</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+<ion-item>
+  <ion-label position="fixed">ROJO</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+<ion-button  color="success" shape="round" fill="outline">Verificar</ion-button>
+
+
+
+
+
+
+
 
 <ion-toolbar>
     <ion-button slot="start" href="/numeros2">
