--- a/src/app/customers3/customers3.page.html
+++ b/src/app/customers3/customers3.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>customers3</ion-title>
+        <ion-title>Tlapali aueyak ouitl</ion-title>
     </ion-toolbar>
 </ion-header>
 
