--- a/src/app/home2/home2.page.html
+++ b/src/app/home2/home2.page.html
@@ -3,35 +3,78 @@
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>home2</ion-title>
+        <ion-title>Tetlapaloa aueyak tsala</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <div class="spinner-border text-primary" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-border text-secondary" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-border text-success" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-border text-danger" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-border text-warning" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-border text-info" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-border text-light" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-border text-dark" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
+  <ion-list>
+    <ion-radio-group value="biff">
+      <ion-list-header>
+        <ion-label>Tlein neskayotia tamoxtla </ion-label>
+      </ion-list-header>
+  
+      <ion-item>
+        <ion-label>Hasta Mañana</ion-label>
+        <ion-radio slot="start" value="biff"></ion-radio>
+      </ion-item>
+  
+      <ion-item>
+        <ion-label>Mañana</ion-label>
+        <ion-radio slot="start" value="griff"></ion-radio>
+      </ion-item>
+  
+      <ion-item>
+        <ion-label>HOY</ion-label>
+        <ion-radio slot="start" value="buford"></ion-radio>
+      </ion-item>
+    </ion-radio-group>
+  </ion-list>
+  <ion-list>
+    <ion-radio-group value="biff">
+      <ion-list-header>
+        <ion-label>Tlein neskayotia kenin motoka </ion-label>
+      </ion-list-header>
+  
+      <ion-item>
+        <ion-label>¿Estas?</ion-label>
+        <ion-radio slot="start" value="biff"></ion-radio>
+      </ion-item>
+  
+      <ion-item>
+        <ion-label>¿Cómo estas?</ion-label>
+        <ion-radio slot="start" value="griff"></ion-radio>
+      </ion-item>
+  
+      <ion-item>
+        <ion-label>HOY</ion-label>
+        <ion-radio slot="start" value="buford"></ion-radio>
+      </ion-item>
+    </ion-radio-group>
+  </ion-list>
+  <ion-list>
+    <ion-radio-group value="biff">
+      <ion-list-header>
+        <ion-label>Tlein neskayotia kenin motoka </ion-label>
+      </ion-list-header>
+  
+      <ion-item>
+        <ion-label>¿Estas?</ion-label>
+        <ion-radio slot="start" value="biff"></ion-radio>
+      </ion-item>
+  
+      <ion-item>
+        <ion-label>¿Cómo estas?</ion-label>
+        <ion-radio slot="start" value="griff"></ion-radio>
+      </ion-item>
+  
+      <ion-item>
+        <ion-label>HOY</ion-label>
+        <ion-radio slot="start" value="buford"></ion-radio>
+      </ion-item>
+      <ion-button  color="success" shape="round" fill="outline">Verificar</ion-button>
+    </ion-radio-group>
+  </ion-list>
 </ion-content>
 <ion-toolbar>
     <ion-button slot="start" href="/folder/folder.module">
