--- a/src/app/numeros2/numeros2.page.html
+++ b/src/app/numeros2/numeros2.page.html
@@ -3,47 +3,103 @@
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>numeros2</ion-title>
+        <ion-title>Tlapoua Aueyak tsala</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-list>
-        <ion-item>
-          <ion-range color="danger" [pin]="true"></ion-range>
-        </ion-item>
+  <ion-text color="dark">
+  <h2>Coloca en orden las decenas.</h2>
+  <h6>Recuerda que una decena es igual a diez y van de diez en diez.</h6>
+</ion-text>
+    <!-- The reorder gesture is disabled by default, enable it to drag and drop items -->
+<ion-reorder-group disabled="false">
+  
+  <!-- Items wrapped in a reorder, entire item can be dragged -->
+  <ion-reorder>
+    <ion-item>
+      <ion-label>
+        10
+      </ion-label>
+    </ion-item>
+  </ion-reorder>
+
+  <ion-reorder>
+    <ion-item>
+      <ion-label>
+        20
+      </ion-label>
+    </ion-item>
+  </ion-reorder>
+  <ion-reorder>
+    <ion-item>
+      <ion-label>
+        30
+      </ion-label>
+    </ion-item>
+  </ion-reorder>
+
+  <ion-reorder>
+    <ion-item>
+      <ion-label>
+        40
+      </ion-label>
+    </ion-item>
+  </ion-reorder>
+  <ion-reorder>
+    <ion-item>
+      <ion-label>
+        50
+      </ion-label>
+    </ion-item>
+  </ion-reorder>
+
+  <ion-reorder>
+    <ion-item>
+      <ion-label>
+        60
+      </ion-label>
+    </ion-item>
+  </ion-reorder>
+  <ion-reorder>
+    <ion-item>
+      <ion-label>
+        70
+      </ion-label>
+    </ion-item>
+  </ion-reorder>
+
+  <ion-reorder>
+    <ion-item>
+      <ion-label>
+        80
+      </ion-label>
+    </ion-item>
+  </ion-reorder>
+  <ion-reorder>
+    <ion-item>
+      <ion-label>
+        90
+      </ion-label>
+    </ion-item>
+  </ion-reorder>
+
+  <ion-reorder>
+    <ion-item>
+      <ion-label>
+        100
+      </ion-label>
+    </ion-item>
+  </ion-reorder>
+  
+</ion-reorder-group>
       
-        <ion-item>
-          <ion-range min="-200" max="200" color="secondary">
-            <ion-label slot="start">-200</ion-label>
-            <ion-label slot="end">200</ion-label>
-          </ion-range>
-        </ion-item>
-      
-        <ion-item>
-          <ion-range min="20" max="80" step="2">
-            <ion-icon size="small" slot="start" name="sunny"></ion-icon>
-            <ion-icon slot="end" name="sunny"></ion-icon>
-          </ion-range>
-        </ion-item>
-      
-        <ion-item>
-          <ion-range min="1000" max="2000" step="100" snaps="true" color="secondary"></ion-range>
-        </ion-item>
-      
-        <ion-item>
-          <ion-range min="1000" max="2000" step="100" snaps="true" ticks="false" color="secondary"></ion-range>
-        </ion-item>
-      
-        <ion-item>
-          <ion-range dualKnobs="true" min="21" max="72" step="3" snaps="true"></ion-range>
-        </ion-item>
-        
-        <ion-item>
-          <ion-range min="0" max="100" [pinFormatter]="customFormatter" [pin]="true"></ion-range>
-        </ion-item>
-      </ion-list>
-</ion-content>
+<ion-list>
+  <ion-item>
+    <ion-range color="danger" [pin]="true"></ion-range>
+  </ion-item>
+
+  <ion-button  color="success" shape="round" fill="outline">Verificar</ion-button>
 <ion-toolbar>
     <ion-button slot="start" href="/home2">
         <ion-icon slot="start" name="caret-back-outline">
