--- a/src/app/numeros3/numeros3.page.html
+++ b/src/app/numeros3/numeros3.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>numeros3</ion-title>
+        <ion-title> Tlapoua aueyak ouitl</ion-title>
     </ion-toolbar>
 </ion-header>
 
