--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -1,3 +1,9 @@
+<ion-header>
+  <ion-toolbar color="mycolor">
+      <ion-title>Yankuik</ion-title>
+      <ion-icon slot="start" [routerLink]="['/login']" name="caret-back-outline"></ion-icon>
+  </ion-toolbar>
+</ion-header>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -33,12 +39,9 @@
           <div id="validationServer03Feedback" class="invalid-feedback">
           </div>
         </div>
-        
-        
-        
-        
+
         <div class="col-12">
-          <a class="btn btn-secondary" href="folder/Inbox">Hecho</a>
+          <a class="btn btn-secondary" olor="success" shape="round" fill="outline" href="folder/Inbox">Hecho</a>
         </div>
       </form>
   </div>
