--- a/src/app/salud2/salud2.page.html
+++ b/src/app/salud2/salud2.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>salud2</ion-title>
+        <ion-title>Pakayelistli Aueyak tsala</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-toolbar>
