--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -1,8 +1,8 @@
 <ion-header>
-  <ion-toolbar color="mycolor">
-      <ion-title>Yankuik</ion-title>
-      <ion-icon slot="start" [routerLink]="['/login']" name="caret-back-outline"></ion-icon>
-  </ion-toolbar>
+    <ion-toolbar color="mycolor">
+        <ion-title>Yankuik</ion-title>
+        <ion-icon slot="start" [routerLink]="['/login']" name="caret-back-outline"></ion-icon>
+    </ion-toolbar>
 </ion-header>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -10,39 +10,37 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="wrapper fadeInDown">
-  <div id="formContent">
-    <!-- Tabs Titles -->
+    <div id="formContent">
+        <!-- Tabs Titles -->
 
-    <!-- Icon -->
-    <div class="fadeIn first">
-      <img src="../../assets/img/logo.jpg" id="icon" alt="User Icon" />
-    </div>
-    <form class="row g-3">
-        <div class="col-md-4">
-          <label for="validationServer01" class="form-label">Nombre</label>
-          <input type="text" class="form-control is-valid" id="validationServer01" value="" required>
-          <div class="valid-feedback">
-          </div>
+        <!-- Icon -->
+        <div class="fadeIn first">
+            <img src="../../assets/img/logo.jpg" id="icon" alt="User Icon" />
         </div>
-        <div class="col-md-4">
-          <label for="validationServerUsername" class="form-label">Correo</label>
-          <div class="input-group has-validation">
-            <span class="input-group-text" id="inputGroupPrepend3">@</span>
-            <input type="text" class="form-control is-invalid" id="validationServerUsername" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
-            <div id="validationServerUsernameFeedback" class="invalid-feedback">
+        <form class="row g-3">
+            <div class="col-md-4">
+                <label for="validationServer01" class="form-label">Tokaitl sen</label>
+                <input type="text" class="form-control is-valid" id="validationServer01" value="" required>
+                <div class="valid-feedback">
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <label for="validationServer03" class="form-label">Contraseña</label>
-          <input type="password" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
-          <div id="validationServer03Feedback" class="invalid-feedback">
-          </div>
-        </div>
+            <div class="col-md-4">
+                <label for="validationServer01" class="form-label">Xakaloa tlakatilistli</label>
+                <input type="date" class="form-control is-valid" id="validationServer01" value="" required>
+                <div class="valid-feedback">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <label for="validationServer03" class="form-label">Tlatlapololistli</label>
+                <input type="password" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
+                <div id="validationServer03Feedback" class="invalid-feedback">
+                </div>
+            </div>
+            <br><br><br><br>
+            <div style="text-align: center">
 
-        <div class="col-12">
-          <a class="btn btn-secondary" olor="success" shape="round" fill="outline" href="folder/Inbox">Hecho</a>
-        </div>
-      </form>
-  </div>
+                <input type="submit" shape="round" fill="outline" value="Tlapia" href="folder/Inbox">
+            </div>
+        </form>
+    </div>
 </div>
