--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 ion-menu ion-content {
-    --background: var(--ion-item-background, var(--ion-background-color, #9dd0fa));
+    --background: #ccc url("/assets/img/fondofinal.jpg") no-repeat center center / cover;
 }
 
 ion-toolbar {
