--- a/src/app/salud2/salud2.page.html
+++ b/src/app/salud2/salud2.page.html
@@ -6,168 +6,72 @@
         <ion-title>Pakayelistli Aueyak tsala</ion-title>
     </ion-toolbar>
 </ion-header>
-<ion-toolbar>
-    <ion-title>Title Only</ion-title>
-  </ion-toolbar>
-  
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title>Back Button</ion-title>
-  </ion-toolbar>
-  
-  <ion-toolbar>
-    <ion-title size="small">Small Title above a Default Title</ion-title>
-  </ion-toolbar>
-  <ion-toolbar>
-    <ion-title>Default Title</ion-title>
-  </ion-toolbar>
-  
-  <ion-toolbar>
-    <ion-buttons slot="secondary">
-      <ion-button>
-        <ion-icon slot="icon-only" name="person-circle"></ion-icon>
-      </ion-button>
-      <ion-button>
-        <ion-icon slot="icon-only" name="search"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-buttons slot="primary">
-      <ion-button color="secondary">
-        <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Default Buttons</ion-title>
-  </ion-toolbar>
-  
-  <ion-toolbar>
-    <ion-buttons slot="secondary">
-      <ion-button fill="solid">
-        <ion-icon slot="start" name="person-circle"></ion-icon>
-        Contact
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Solid Buttons</ion-title>
-    <ion-buttons slot="primary">
-      <ion-button fill="solid" color="secondary">
-        Help
-        <ion-icon slot="end" name="help-circle"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-  
-  <ion-toolbar>
-    <ion-buttons slot="secondary">
-      <ion-button fill="outline">
-        <ion-icon slot="start" name="star"></ion-icon>
-        Star
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Outline Buttons</ion-title>
-    <ion-buttons slot="primary">
-      <ion-button color="danger" fill="outline">
-        Edit
-        <ion-icon slot="end" name="create"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-  
-  <ion-toolbar>
-    <ion-buttons slot="secondary">
-      <ion-button>
-        Account
-      </ion-button>
-    </ion-buttons>
-    <ion-buttons slot="primary">
-      <ion-button color="danger">
-        Edit
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Text Only Buttons</ion-title>
-  </ion-toolbar>
-  
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button autoHide="false"></ion-menu-button>
-  
-    </ion-buttons>
-    <ion-buttons slot="secondary">
-      <ion-button>
-        <ion-icon slot="icon-only" name="star"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Left side menu toggle</ion-title>
-  </ion-toolbar>
-  
-  <ion-toolbar>
-    <ion-buttons slot="primary">
-      <ion-button (click)="clickedStar()">
-        <ion-icon slot="icon-only" name="star"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Right side menu toggle</ion-title>
-    <ion-buttons slot="end">
-      <ion-menu-button autoHide="false"></ion-menu-button>
-  
-    </ion-buttons>
-  </ion-toolbar>
-  
-  <ion-toolbar>
-    <ion-buttons slot="primary">
-      <ion-button (click)="clickedSearch()">
-        <ion-icon slot="icon-only" name="search"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-searchbar placeholder="Search Favorites"></ion-searchbar>
-  </ion-toolbar>
-  
-  <ion-toolbar>
-    <ion-segment value="all">
-      <ion-segment-button value="all">
-        All
-      </ion-segment-button>
-      <ion-segment-button value="favorites">
-        Favorites
-      </ion-segment-button>
-    </ion-segment>
-  </ion-toolbar>
-  
-  <ion-toolbar color="secondary">
-    <ion-buttons slot="secondary">
-      <ion-button>
-        <ion-icon slot="icon-only" name="person-circle"></ion-icon>
-      </ion-button>
-      <ion-button>
-        <ion-icon slot="icon-only" name="search"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-buttons slot="primary">
-      <ion-button color="primary">
-        <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Secondary Toolbar</ion-title>
-  </ion-toolbar>
-  
-  <ion-toolbar color="dark">
-    <ion-buttons slot="secondary">
-      <ion-button>
-        <ion-icon slot="icon-only" name="person-circle"></ion-icon>
-      </ion-button>
-      <ion-button>
-        <ion-icon slot="icon-only" name="search"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-buttons slot="primary">
-      <ion-button color="danger">
-        <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Dark Toolbar</ion-title>
-  </ion-toolbar>
 <ion-content>
+    <ion-list>
+        <ion-radio-group value="enf1">
+            <ion-list-header>
+                <ion-label>Pepena in patiani palouili</ion-label>
+            </ion-list-header>
 
+            <ion-item>
+                <ion-label>Dolor del corazon</ion-label>
+                <ion-radio slot="start" value="corazon"></ion-radio>
+            </ion-item>
+
+            <ion-item>
+                <ion-label>Estornudo</ion-label>
+                <ion-radio slot="start" value="estornudo"></ion-radio>
+            </ion-item>
+
+            <ion-item>
+                <ion-label>Fiebre</ion-label>
+                <ion-radio slot="start" value="fiebre"></ion-radio>
+            </ion-item>
+        </ion-radio-group>
+    </ion-list>
+    <ion-list>
+        <ion-radio-group value="enf2">
+            <ion-list-header>
+                <ion-label>Pepena in patiani ouiyo</ion-label>
+            </ion-list-header>
+
+            <ion-item>
+                <ion-label>Enfermedad contagiosa</ion-label>
+                <ion-radio slot="start" value="contagiosa"></ion-radio>
+            </ion-item>
+
+            <ion-item>
+                <ion-label>Dolor del cuerpo</ion-label>
+                <ion-radio slot="start" value="cuerpo"></ion-radio>
+            </ion-item>
+
+            <ion-item>
+                <ion-label>Escurrimiento nasal</ion-label>
+                <ion-radio slot="start" value="nasal"></ion-radio>
+            </ion-item>
+        </ion-radio-group>
+    </ion-list>
+    <ion-list>
+        <ion-radio-group value="enf3">
+            <ion-list-header>
+                <ion-label>Pepena in patiani kentsin</ion-label>
+            </ion-list-header>
+
+            <ion-item>
+                <ion-label>Embarazada</ion-label>
+                <ion-radio slot="start" value="embarazada"></ion-radio>
+            </ion-item>
+            <ion-item>
+                <ion-label>Falta de aire</ion-label>
+                <ion-radio slot="start" value="aire"></ion-radio>
+            </ion-item>
+            <ion-item>
+                <ion-label>Estreñimiento</ion-label>
+                <ion-radio slot="start" value="estreñimiento"></ion-radio>
+            </ion-item>
+            <ion-button color="success" shape="round" fill="outline">Verificar</ion-button>
+        </ion-radio-group>
+    </ion-list>
 </ion-content>
 <ion-toolbar>
     <ion-button slot="start" href="/customers2">
