--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
         <ion-menu contentId="main-content" type="overlay">
             <ion-content>
                 <ion-list id="inbox-list">
-                    <ion-list-header>Tlamachtilistli</ion-list-header>
+                    <a style="text-decoration:none" href="/folder/folder.module">
+                    <ion-list-header >Tlamachtilistli</ion-list-header></a>
                     <ion-accordion-group>
                         <ion-accordion value="colors" toggle-icon="chevron-down">
                             <ion-item slot="header">
