--- a/src/app/formulario/formulario.page.html
+++ b/src/app/formulario/formulario.page.html
@@ -6,15 +6,27 @@
 
 <ion-content>
   <div class="input-group mb-3">
-    <label class="input-group-text" for="inputGroupSelect01">Options</label>
+    <label class="input-group-text" for="inputGroupSelect01">Especialidad</label>
     <select class="form-select" id="inputGroupSelect01">
-      <option selected>Choose...</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
+      <option selected>Dentista</option>
+      <option value="1">Medico</option>
+      <option value="2">Oculista</option>
       <option value="3">Three</option>
     </select>
   </div>
   
+  <div *ngFor="let item of data">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>Tipo: {{item.Tipo}}</ion-card-subtitle>
+        <ion-card-title>Especialidad: {{item.Especialidad}}</ion-card-title>
+      </ion-card-header>
+    
+      <ion-card-content>
+       Estas recoemdaciones son basadas desde estuidios Especialidados 
+      </ion-card-content>
+    </ion-card>
+  </div>
 
 </ion-content>
 <ion-toolbar>
